DTS-45171: align sprint date logic change